<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CHIPSApp</string>
    <string name="scanBarcodeButton">Scan Barcode</string>
    <string name="searchFoodButton">Search For Food</string>
    <string name="doSearchFoodButton">Search</string>
    <string name="shoppingList">Shopping Lists</string>
    <string name="calendar">Calendar</string>
    <string name="inventory">Inventory</string>
    <string name="preferences">Preferences</string>
    <string name="statistics">Statistics</string>
    <string name="shoppingListsHeader">Your Shopping List:</string>
    <string name="calendarHeader">Your Calendar:</string>
    <string name="inventoryHeader">Your Current Inventory:</string>
    <string name="preferencesHeader">Your Preferences:</string>
    <string name="statisticsHeader">Your Statistics:</string>
    <string name="back">Back</string>
    <string name="foodNameTextViewTitle">Food Name</string>
    <string name="caloriesTextViewTitle">Calories</string>
    <string name="carbohydratesTextViewTitle">Carbohydrates</string>
    <string name="fatTextViewTitle">Fat</string>
    <string name="proteinTextViewTitle">Protein</string>
    <string name="quantityTextViewTitle">Quantity</string>
    <string name="childCaloriesTitle">Calories</string>
    <string name="childCarbohydratesTitle">Carbohydrates</string>
    <string name="childProteinTitle">Protein</string>
    <string name="childFatTitle">Fat</string>
    <string name="childQuantityTitle">Quantity</string>
    <string name="childUpdateQuantityButtonTitle">Update</string>
    <string name="usernameEditTextTitle">Username</string>
    <string name="rememberPasswordCheckboxTitle">Remember Login Details</string>
    <string name="loginAutomaticallyCheckboxTitle">Login Automatically</string>
    <string name="barcodeTextViewTitle">Barcode</string>
    <string name="barcodeFormatTextViewTitle">Barcode Format</string>
    <string name="shopping_group_checkbox_text"></string>
    <string name="mealViewDefault">No Meals Found</string>
    <string name="heightTitle">Height</string>
    <string name="weightTitle">Weight</string>
    <string name="expanded_food_title">Nutritional Information (per 100g)</string>
    <string name="childServingSizeTitle">Serving Size</string>
    <string name="mealNutritionalSummaryTitle">Nutritional Information</string>
    <string name="mealIngredientsTitle">Ingredients</string>
    <string name="mealEditButtonText">Edit</string>
    <string name="mealNameFieldLabel">Name</string>
    <string name="loginChipsTitle">Computer Health Information Processing System</string>
</resources>
