<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/expanded_food_title"></TextView>
    <TableLayout android:id="@+id/nutritionTable" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TableRow android:layout_width="wrap_content" android:id="@+id/caloriesRow" android:layout_height="wrap_content">
            <TextView android:text="@string/childCaloriesTitle" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/childCaloriesTitle"></TextView>
            <TextView android:text="TextView" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center|right" android:id="@+id/childCaloriesDisplay"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:id="@+id/carbohydratesRow" android:layout_height="wrap_content">
            <TextView android:text="@string/childCarbohydratesTitle" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/childCarbohydratesTitle"></TextView>
            <TextView android:text="TextView" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center|right" android:id="@+id/childCarbohydratesDisplay"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:id="@+id/proteinRow" android:layout_height="wrap_content">
            <TextView android:text="@string/childProteinTitle" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/childProteinTitle"></TextView>
            <TextView android:text="TextView" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center|right" android:id="@+id/childProteinDisplay"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:id="@+id/fatRow" android:layout_height="wrap_content">
            <TextView android:text="@string/childFatTitle" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/childFatTitle"></TextView>
            <TextView android:text="TextView" android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center|right" android:id="@+id/childFatDisplay"></TextView>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:id="@+id/childQuantityRow" android:layout_height="wrap_content">
            <TextView android:text="@string/childQuantityTitle" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/childQuantityTitle"></TextView>
            <EditText android:layout_weight="1" android:gravity="right" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="number|numberDecimal" android:id="@+id/childQuantityEditText">
                <requestFocus></requestFocus>
            </EditText>
            <Button android:text="@string/childUpdateQuantityButtonTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/childUpdateButton"></Button>
        </TableRow>
    </TableLayout>
    
</LinearLayout>
